--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
 <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2 class="text-primary">🚀 Gerenciamento de Viagens Espaciais</h2>
-        <button class="btn btn-success" onclick="abrirModalCriar()">+ Nova Viagem</button>
+        <button class="btn btn-danger" onclick="abrirModalCriar()">+ Nova Viagem</button>
     </div>
 
     <div class="card p-3">
