alteração no index

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,8 @@
 
 <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h2 class="text-primary">🚀 Gerenciamento de Viagens Espaciais</h2>
+        <h2 class="text-primary">🚀 Gerenciamento de Viagens Espaciaiss</h2>
+        <span>v.1.0.23</span>
         <button class="btn btn-danger" onclick="abrirModalCriar()">+ Nova Viagenee</button>
     </div>
 
