--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,9 +14,9 @@
 
 <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h2 class="text-primary">🚀 Gerenciamento de Viagens Espaciaiss</h2>
-        <span>v.1.0.23</span>
-        <button class="btn btn-danger" onclick="abrirModalCriar()">+ Nova Viagenee</button>
+        <h2 class="text-primary">🚀 Gerenciamento de Viagens Espaciais</h2>
+        <span>v.1.0.36</span>
+        <button class="btn btn-success" onclick="abrirModalCriar()">+ Nova Viagem</button>
     </div>
 
     <div class="card p-3">
